  Changelog for the c-ares project

* November 23, 2009 (Yang Tse)
- Changed naming convention for c-ares libraries built with MSVC, details
  and build instructions provided in README.msvc file.

* November 22, 2009 (Yang Tse)
- Jakub Hrozek fixed more function prototypes in man pages to sync them
  with the ones declared in ares.h

- Jakub Hrozek renamed addrttl and addr6ttl structs to ares_addrttl and
  ares_addr6ttl in order to prevent name space pollution, along with
  necessary changes to code base and man pages.This change does not break
  ABI, there is no need to recompile existing applications. But existing
  applications using these structs with the old name will need source code
  adjustments when recompiled using c-ares 1.7.0.

* November 21, 2009 (Yang Tse)
- Added manifest stuff to Makefile.msvc.

* November 20, 2009 (Yang Tse)
- Fixed several function prototypes in man pages that were out of sync
  with the ones declared in ares.h.  Added ares_free_data() along with
  man page.  Updated ares_parse_srv_reply() and ares_parse_txt_reply()
  with changes from Jakub Hrozek making these now return linked lists
  instead of arrays, and merging the ares_free_data() adjustments.

* November 10, 2009 (Yang Tse)
- Updated MSVC 6.0 project files to match settings from Makefile.msvc.

* November 9, 2009 (Yang Tse)
- Makefile.msvc is now the reference method to build c-ares and sample
  programs with any MSVC compiler or MS Visual Studio version.  If no
  option or target are specified it builds dynamic and static c-ares
  libraries in debug and release flavours and also builds all sample
  programs using each of the different c-ares libraries.

* November 2, 2009 (Yang Tse)
- Renamed c-ares setup.h to ares_setup.h

* October 31, 2009 (Yang Tse)
- Symbol hiding configure options are named now --enable-symbol-hiding
  and --disable-symbol-hiding in an attempt to make them less ambiguous.

* October 30, 2009 (Yang Tse)
- Many fixes for ares_parse_txt_reply()
