@@ -1,4 +1,4 @@
-/* $Id: ares_parse_txt_reply.c,v 1.8 2009-11-20 09:54:15 yangtse Exp $ */
+/* $Id: ares_parse_txt_reply.c,v 1.9 2009-11-26 01:21:21 yangtse Exp $ */
 
 /* Copyright 1998 by the Massachusetts Institute of Technology.
  * Copyright (C) 2009 by Jakub Hrozek <jhrozek@redhat.com>
@@ -172,14 +172,14 @@ ares_parse_txt_reply (const unsigned char *abuf, int alen,
             }
           /* Make sure we NULL-terminate */
           *((char *) txt_curr->txt + txt_curr->length) = '\0';
-
-          /* Move on to the next record */
-          aptr += rr_len;
         }
 
       /* Don't lose memory in the next iteration */
       free (rr_name);
       rr_name = NULL;
+
+      /* Move on to the next record */
+      aptr += rr_len;
     }
 
   if (hostname)
