@@ -31,6 +31,6 @@ Fixed:
 Thanks go to these friendly people for their efforts and contributions:
 
  Phil Blundell, Japheth Cleaver, Yang Tse, Gregor Jasny, Joshua Kwan,
- Timo Teras, Jakub Hrozek, John Engelhart
+ Timo Teras, Jakub Hrozek, John Engelhart, Larry Lansing
 
 Have fun!
