@@ -1,5 +1,10 @@
   Changelog for the c-ares project
 
+* November 26, 2009 (Yang Tse)
+- Larry Lansing fixed ares_parse_srv_reply to properly parse replies
+  which might contain non-SRV answers, skipping over potential non-SRV
+  ones such as CNAMEs.
+
 * November 23, 2009 (Yang Tse)
 - Changed naming convention for c-ares libraries built with MSVC, details
   and build instructions provided in README.msvc file.
